--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.12.0</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -107,6 +102,10 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>xvfb</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jenkins.plugins</groupId>
+            <artifactId>commons-lang3-api</artifactId>
         </dependency>
     </dependencies>
 
