Added License Path parameter and updated installer links.

--- a/src/main/resources/io/jenkins/plugins/ProvarAutomation/config.properties
+++ b/src/main/resources/io/jenkins/plugins/ProvarAutomation/config.properties
@@ -18,3 +18,5 @@ SalesforceMetadataCacheSetting=Salesforce Metadata Cache Setting
 SalesforceMetadataCacheSettingDescr=The Salesforce metadata cache refresh setting
 ResultsPathSetting=Test Results Path Setting
 ResultsPathSettingDescr=How to handle the results directory before the next run
+LicensePath=Execution License Path
+LicensePathDescr=The path of the '.licenses' directory on the machine being used to run Provar tests
